# dde-grand-search

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  lupdate.sh  translate_generation.sh
.reuse/: dep5
src/dde-grand-search-daemon/: CMakeLists.txt  grand-search-daemon.json  main.cpp  org.deepin.dde.GrandSearchDaemon.service
src/dde-grand-search-daemon/configuration/: configer.cpp  configer.h  configer_p.h  preferenceitem.h  userpreference.cpp  userpreference.h
src/dde-grand-search-daemon/dbusservice/: grandsearchinterface.cpp  grandsearchinterface.h  grandsearchinterface_p.h  org.deepin.dde.GrandSearchDaemon.xml
src/dde-grand-search-daemon/maincontroller/: maincontroller.cpp  maincontroller.h  maincontroller_p.h
src/dde-grand-search-daemon/searcher/: proxyworker.cpp  proxyworker.h  searcher.cpp  searcher.h  searchergroup.cpp  searchergroup.h  searchergroup_p.h
src/dde-grand-search-daemon/searchplugin/: pluginliaison.cpp  pluginliaison.h  pluginliaison_p.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h
src/dde-grand-search-daemon/utils/: chineseletterhelper.cpp  chineseletterhelper.h  dict.qrc  pinyin.dict  searchpluginconf.h  searchplugininfo.h  searchpluginprotocol.h  specialtools.cpp  specialtools.h
src/grand-search/: CMakeLists.txt  dde-grand-search.desktop  main.cpp  setting_main.cpp
src/grand-search-daemon/: CMakeLists.txt  daemonlibrary.cpp  daemonlibrary.h  main.cpp
src/grand-search-daemon/configuration/: configer.cpp  configer.h  configer_p.h  userpreference.cpp  userpreference.h
src/grand-search-daemon/data/: com.deepin.dde.daemon.GrandSearch.service  dde-grand-search-daemon.desktop
src/grand-search-daemon/dbusservice/: com.deepin.dde.daemon.GrandSearch.service  com.deepin.dde.daemon.GrandSearch.xml  grandsearchinterface.cpp  grandsearchinterface.h  grandsearchinterface_p.h  grandsearchinterfaceprivate.h
src/grand-search-daemon/maincontroller/: maincontroller.cpp  maincontroller.h  maincontroller_p.h  maincontrollerprivate.h
src/grand-search-daemon/searcher/: proxyworker.cpp  proxyworker.h  searcher.cpp  searcher.h  searchergroup.cpp  searchergroup.h  searchergroup_p.h  searchergroupprivate.h
src/grand-search-daemon/searchplugin/: dataconvertor.cpp  dataconvertor.h  pluginliaison.cpp  pluginliaison.h  pluginliaison_p.h  pluginliaisonprivate.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginmanagerprivate.h
src/grand-search-daemon/utils/: chineseletterdict.cpp  chineseletterdict.h  chineseletterhelper.cpp  chineseletterhelper.h  searchhelper.cpp  searchhelper.h  searchpluginconf.h  searchplugininfo.h  searchpluginprotocol.h  specialtools.cpp  specialtools.h  utiltools.cpp  utiltools.h
src/grand-search-dock-plugin/: CMakeLists.txt  ddegrandsearchdockplugin.cpp  ddegrandsearchdockplugin.h  versiondefine.h
src/grand-search-dock-plugin/gschema/: com.deepin.dde.dock.module.grand-search.gschema.xml
src/grand-search-dock-plugin/gui/: grandsearchwidget.cpp  grandsearchwidget.h  resource.qrc  tipswidget.cpp  tipswidget.h
src/grand-search-shell-plugin/: CMakeLists.txt  searchitem.cpp  searchitem.h
src/grand-search-shell-plugin/package/: metadata.json  searchitem.qml
src/grand-search-shell-plugin/translations/: org.deepin.ds.dock.searchitem.ts  org.deepin.ds.dock.searchitem_ca.ts  org.deepin.ds.dock.searchitem_de.ts  org.deepin.ds.dock.searchitem_de_DE.ts  org.deepin.ds.dock.searchitem_es.ts  org.deepin.ds.dock.searchitem_fi.ts  org.deepin.ds.dock.searchitem_hu.ts  org.deepin.ds.dock.searchitem_lo.ts  org.deepin.ds.dock.searchitem_nl.ts  org.deepin.ds.dock.searchitem_pl.ts  org.deepin.ds.dock.searchitem_pt_BR.ts  org.deepin.ds.dock.searchitem_ru.ts  org.deepin.ds.dock.searchitem_uk.ts  org.deepin.ds.dock.searchitem_zh_CN.ts  org.deepin.ds.dock.searchitem_zh_HK.ts  org.deepin.ds.dock.searchitem_zh_TW.ts
src/grand-search/gui/: datadefine.h  mainwindow.cpp  mainwindow.h  mainwindow_p.h
src/grand-search/thumbnail/: thumbnail.h  thumbnailcache.cpp  thumbnailcache.h  thumbnailgenerator.cpp  thumbnailgenerator.h  thumbnailprovider.cpp  thumbnailprovider.h  thumbnailtaskmanager.cpp  thumbnailtaskmanager.h
src/grand-search/utils/: filestatisticsthread.cpp  filestatisticsthread.h  previewpluginconf.h  utils.cpp  utils.h
src/preview-plugin/: CMakeLists.txt  resource.qrc
src/preview-plugin/audio-preview/: CMakeLists.txt  audio-preview-plugin.conf  audiofileinfo.cpp  audiofileinfo.h  audiopreview_global.h  audiopreviewinterface.cpp  audiopreviewinterface.h  audiopreviewplugin.cpp  audiopreviewplugin.h  audioview.cpp  audioview.h  libaudioviewer.cpp  libaudioviewer.h
src/preview-plugin/image-preview/: CMakeLists.txt  image-preview-plugin.conf  imagepreview_global.h  imagepreviewinterface.cpp  imagepreviewinterface.h  imagepreviewplugin.cpp  imagepreviewplugin.h  imageview.cpp  imageview.h
src/preview-plugin/pdf-preview/: CMakeLists.txt  pdf-preview-plugin.conf  pdfpreview_global.h  pdfpreviewinterface.cpp  pdfpreviewinterface.h  pdfpreviewplugin.cpp  pdfpreviewplugin.h  pdfview.cpp  pdfview.h
src/preview-plugin/text-preview/: CMakeLists.txt  text-preview-plugin.conf  textpreview_global.h  textpreviewinterface.cpp  textpreviewinterface.h  textpreviewplugin.cpp  textpreviewplugin.h  textview.cpp  textview.h
src/preview-plugin/video-preview/: CMakeLists.txt  libvideoviewer.cpp  libvideoviewer.h  video-preview-plugin.conf  videopreview_global.h  videopreviewinterface.cpp  videopreviewinterface.h  videopreviewplugin.cpp  videopreviewplugin.h  videoview.cpp  videoview.h
src/tools/dslparser/: CMakeLists.txt  dslparser.cpp  dslparser.h
tests/: CMakeLists.txt  all-ut-prj-running.sh  cppcheck-prj-running.sh  test-prj-running.sh  ut-target-running.sh
tests/grand-search/: CMakeLists.txt  main.cpp
tests/grand-search-daemon/: CMakeLists.txt  main.cpp
tests/grand-search-dock-plugin/: CMakeLists.txt  main.cpp  ut_ddegrandsearchdockplugin.cpp  ut_mock_pluginproxyinterface.h
tests/libgrand-search-daemon/: CMakeLists.txt  main.cpp  ut_commontools.cpp
tests/preview-plugin/: CMakeLists.txt  main.cpp
(+688 files in other folders)
